<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintHorizontal_bias=".25"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/operationTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/newNumberEt"
        app:layout_constraintEnd_toStartOf="@+id/resultEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Numbers go BRRR" />

    <EditText
        android:id="@+id/resultEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newNumberEt"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:ems="10"
        android:gravity="bottom|end"
        android:textSize="55sp"
        app:layout_constraintTop_toBottomOf="@+id/resultEt"
        tools:text="123456789" />


    <Button
        android:id="@+id/button_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:minWidth="0dp"
        android:onClick="onClear"
        android:text="@string/clear"
        app:chainUseRtl="true"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newNumberEt"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:minWidth="0dp"
        android:onClick="onOperator"
        android:text="@string/divide"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toEndOf="@+id/button_paren"
        app:layout_constraintTop_toBottomOf="@+id/newNumberEt"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_percent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:minWidth="0dp"
        android:onClick="onDigit"
        android:text="@string/percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_divide"
        app:layout_constraintTop_toBottomOf="@+id/newNumberEt"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_paren"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:minWidth="0dp"
        android:onClick="onDigit"
        android:text="@string/parens"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toEndOf="@+id/button_clear"
        app:layout_constraintTop_toBottomOf="@+id/newNumberEt"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:minWidth="0dp"
        android:onClick="onOperator"
        android:text="@string/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button_percent"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:minWidth="0dp"
        android:onClick="onDigit"
        android:text="@string/one"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:minWidth="0dp"
        android:onClick="onOperator"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button_minus"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:minWidth="0dp"
        android:onClick="onDigit"
        android:text="@string/eight"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button_paren"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:minWidth="0dp"
        android:onClick="onDigit"
        android:text="@string/five"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:minWidth="0dp"
        android:onClick="onDecimalPoint"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:onClick="onDigit"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintWidth_percent=".46"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:minWidth="0dp"
        android:onClick="onDigit"
        android:text="@string/seven"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_clear"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:minWidth="0dp"
        android:onClick="onDigit"
        android:text="@string/six"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_equals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:minWidth="0dp"
        android:onClick="onEquals"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        app:layout_constraintTop_toBottomOf="@+id/button_plus"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:minWidth="0dp"
        android:onClick="onDigit"
        android:text="@string/nine"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button_divide"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:minWidth="0dp"
        android:onClick="onDigit"
        android:text="@string/two"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:minWidth="0dp"
        android:onClick="onDigit"
        android:text="@string/three"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:minWidth="0dp"
        android:onClick="onDigit"
        android:text="@string/four"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:minWidth="0dp"
        android:onClick="onOperator"
        android:text="@string/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button_multiply"
        app:layout_constraintWidth_percent=".225"
        tools:ignore="UsingOnClickInXml" />


</androidx.constraintlayout.widget.ConstraintLayout>